<resources>
    <string name="app_name">Movies App</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="login">Login</string>
    <string name="alert_connection_error">It seems that you are encountering connection issues, please try again.</string>
    <string name="alert_credentials_error">Email or password is invalid.</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_movies">Movies</string>
    <string name="card_number">Card</string>
    <string name="show">Show</string>
    <string name="profile_transactions_hint">Input a card number to get latest transactions</string>
    <string name="welcome">Welcome</string>
    <string name="profile_card_number">Card No. %s</string>
    <string name="full_name" translatable="false">%s %s</string>
    <string name="alert_empty_card_number">Card number field can\'t be empty</string>
    <string name="alert_user_not_found">Sorry, your user was not found</string>
</resources>